<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>speed_module_pkg</name>
  <version>0.0.0</version>
  <description>Speed module package for ACC and Creep control logic</description>
  <maintainer email="team2@todo.todo">team2</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>can_msgs</depend>
  
  <exec_depend>ros2_socketcan</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>